@@ -4339,7 +4339,6 @@ This can be overridden by prepending the unit expression with "?" or "0".</prope
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="hexpand">False</property>
-                                        <property name="pixel_size">14</property>
                                         <property name="icon_name">go-down-symbolic</property>
                                       </object>
                                       <packing>
@@ -4363,7 +4362,6 @@ This can be overridden by prepending the unit expression with "?" or "0".</prope
                                       <object class="GtkImage" id="button_up_image">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="pixel_size">14</property>
                                         <property name="icon_name">go-up-symbolic</property>
                                       </object>
                                       <packing>
@@ -4424,7 +4422,6 @@ This can be overridden by prepending the unit expression with "?" or "0".</prope
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="hexpand">False</property>
-                                        <property name="pixel_size">14</property>
                                         <property name="icon_name">go-previous-symbolic</property>
                                       </object>
                                       <packing>
@@ -4448,7 +4445,6 @@ This can be overridden by prepending the unit expression with "?" or "0".</prope
                                       <object class="GtkImage" id="button_right_image">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="pixel_size">14</property>
                                         <property name="icon_name">go-next-symbolic</property>
                                       </object>
                                       <packing>
