@@ -197,7 +197,6 @@ Note that only the mode, history and definitions of the last closed instance wil
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_underline">True</property>
-                    <property name="inconsistent">True</property>
                     <property name="draw_indicator">True</property>
                     <signal name="toggled" handler="on_preferences_checkbutton_dark_theme_toggled" swapped="no"/>
                   </object>
