@@ -1,3 +1,9 @@
+2019-05-06 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Improved handling of vectors and matrices in insert function dialog
+	* Fixes for old gtk versions
+	* --without-local-help configure option
+
 2019-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Gnome shell search provider
